objects/CRMforNonProfit__Fio_Bank_Account__c.object
<CustomObject>
    <fields>
        <fullName>CRMforNonProfit__Account_Num__c</fullName>
        <label>Account Num</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Currency__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Disable_Outgoing_Transactions_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Outgoing Transactions Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__IBAN__c</fullName>
        <label>IBAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Last_Sync__c</fullName>
        <label>Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Sync_From__c</fullName>
        <label>Sync From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Sync_Status__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Syncing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Deleting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fio Bank Account</label>
    <nameField>
        <label>Fio Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fio Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>